/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package github.com.kaleido_io.paladin.kata.zeto;
option go_package = "pkg/proto/zeto";

message ProvingRequest {
  string circuitId = 1;
  ProvingRequestCommon common = 2;
  bytes extras = 3;
}

message ProvingRequestCommon {
  repeated string inputCommitments = 2;
  repeated uint64 inputValues = 3;
  repeated string inputSalts = 4;
  string inputOwner = 5;
  repeated uint64 outputValues = 6;
  repeated string outputOwners = 7;
}
